Feat : Auth Service Done

--- a/auth-service/.env
+++ b/auth-service/.env
@@ -1,3 +1,9 @@
 DATABASE_URI=postgres://postgres:1234@localhost:5432/auth_service?sslmode=disable
 JWT_SECRET=your_jwt_secret_key
 GRPC_PORT=50051
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-gmail@gmail.com
+SMTP_PASS=isi-dengan-app-password-tadi
+SMTP_FROM=your-gmail@gmail.com
