--- a/transaction-service/.env
+++ b/transaction-service/.env
@@ -1,2 +1,5 @@
 DATABASE_URI=postgres://postgres:1234@localhost:5432/transaction_service?sslmode=disable
 GRPC_PORT=50055
+MIDTRANS_SERVER_KEY=your_server_key
+MIDTRANS_CLIENT_KEY=your_client_key
+MIDTRANS_ENV=sandbox
