--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
 version: '3.8'
 
 services:
-  
   auth-service:
     build:
       context: ./auth-service
     container_name: auth-service
     ports:
-      - "50051:50051"  # gRPC port
+      - "50051:50051"
     environment:
       - DATABASE_URI=postgres://postgres:1234@postgres:5432/auth_service?sslmode=disable
       - JWT_SECRET=your_jwt_secret_key
@@ -20,20 +19,18 @@ services:
     depends_on:
       - postgres
 
-  
   courier-service:
     build:
       context: ./courier-service
     container_name: courier-service
     ports:
-      - "50052:50052"  # gRPC port
+      - "50052:50052"
     environment:
       - DATABASE_URI=postgres://postgres:1234@postgres:5432/courier_service?sslmode=disable
       - GRPC_PORT=50052
     depends_on:
       - postgres
 
-  
   food-service:
     build:
       context: ./food-service
@@ -46,7 +43,6 @@ services:
     depends_on:
       - postgres
 
-  
   merchant-service:
     build:
       context: ./merchant-service
@@ -59,7 +55,6 @@ services:
     depends_on:
       - postgres
 
-  
   transaction-service:
     build:
       context: ./transaction-service
@@ -72,28 +67,27 @@ services:
     depends_on:
       - postgres
 
-  
-  gateway-service:
-    build:
-      context: ./gateway-service
-    container_name: gateway-service
-    ports:
-      - "8081:8081"  # Gateway di port 8081
-    environment:
-      - AUTH_GRPC_HOST=auth-service:50051
-      - COURIER_GRPC_HOST=courier-service:50052
-      - FOOD_GRPC_HOST=food-service:50053
-      - MERCHANT_GRPC_HOST=merchant-service:50054
-      - TRANSACTION_GRPC_HOST=transaction-service:50055
-      - GATEWAY_PORT=8081
-    depends_on:
-      - auth-service
-      - courier-service
-      - food-service
-      - merchant-service
-      - transaction-service
+  # gateway-service:
+  #   build:
+  #     context: ./gateway-service
+  #   container_name: gateway-service
+  #   ports:
+  #     - "8081:8081"
+  #   environment:
+  #     - AUTH_GRPC_HOST=auth-service:50051
+  #     - COURIER_GRPC_HOST=courier-service:50052
+  #     - FOOD_GRPC_HOST=food-service:50053
+  #     - MERCHANT_GRPC_HOST=merchant-service:50054
+  #     - TRANSACTION_GRPC_HOST=transaction-service:50055
+  #     - GATEWAY_PORT=8081
+  #   depends_on:
+  #     - auth-service
+  #     - courier-service
+  #     - food-service
+  #     - merchant-service
+  #     - transaction-service
 
-  :
+  postgres:
     image: postgres:15
     container_name: postgres
     environment:
