Feat: Add Kafka , Cron Job , SMTP , Midtrans , Geocode

--- a/auth-service/.env
+++ b/auth-service/.env
@@ -2,8 +2,11 @@ DATABASE_URI=postgres://postgres:1234@localhost:5432/auth_service?sslmode=disabl
 JWT_SECRET=your_jwt_secret_key
 GRPC_PORT=50051
 
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-gmail@gmail.com
-SMTP_PASS=isi-dengan-app-password-tadi
-SMTP_FROM=your-gmail@gmail.com
+SMTP_HOST=yourhost.com
+SMTP_PORT=465/587
+SMTP_USER=email@gmail.com
+SMTP_PASS=email_password
+SMTP_FROM=email@gmail.com
+
+
+GOOGLE_API_KEY=AIzaSyADuYB4pe4PPKai6ULrUMVDjUFWxl22afc
