--- a/merchant-service/.env
+++ b/merchant-service/.env
@@ -1,2 +1,4 @@
 DATABASE_URI=postgres://postgres:1234@localhost:5432/merchant_service?sslmode=disable
 GRPC_PORT=50054
+
+GOOGLE_API_KEY=AIzaSyADuYB4pe4PPKai6ULrUMVDjUFWxl22afc
