--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   auth-service:
     build:
       context: ./auth-service
+    image: asia-southeast2-docker.pkg.dev/exalted-arcanum-465715-h7/onlinefood-repo/auth-service:latest
     container_name: auth-service
     ports:
       - "50051:50051"
@@ -13,15 +14,17 @@ services:
       - GRPC_PORT=50051
       - SMTP_HOST=smtp.gmail.com
       - SMTP_PORT=587
-      - SMTP_USER=your-gmail@gmail.com
-      - SMTP_PASS=isi-dengan-app-password
-      - SMTP_FROM=your-gmail@gmail.com
+      - SMTP_USER=ruditopujiarso@gmail.com
+      - SMTP_PASS=elzi jyjh plqs hbxv
+      - SMTP_FROM=ruditopujiarso@gmail.com
+      - GOOGLE_API_KEY=AIzaSyADuYB4pe4PPKai6ULrUMVDjUFWxl22afc
     depends_on:
       - postgres
 
   courier-service:
     build:
       context: ./courier-service
+    image: asia-southeast2-docker.pkg.dev/exalted-arcanum-465715-h7/onlinefood-repo/courier-service:latest
     container_name: courier-service
     ports:
       - "50052:50052"
@@ -34,6 +37,7 @@ services:
   food-service:
     build:
       context: ./food-service
+    image: asia-southeast2-docker.pkg.dev/exalted-arcanum-465715-h7/onlinefood-repo/food-service:latest
     container_name: food-service
     ports:
       - "50053:50053"
@@ -46,6 +50,7 @@ services:
   merchant-service:
     build:
       context: ./merchant-service
+    image: asia-southeast2-docker.pkg.dev/exalted-arcanum-465715-h7/onlinefood-repo/merchant-service:latest
     container_name: merchant-service
     ports:
       - "50054:50054"
@@ -58,12 +63,14 @@ services:
   transaction-service:
     build:
       context: ./transaction-service
+    image: asia-southeast2-docker.pkg.dev/exalted-arcanum-465715-h7/onlinefood-repo/transaction-service:latest
     container_name: transaction-service
     ports:
       - "50055:50055"
     environment:
       - DATABASE_URI=postgres://postgres:1234@postgres:5432/transaction_service?sslmode=disable
       - GRPC_PORT=50055
+      - GOOGLE_API_KEY=AIzaSyADuYB4pe4PPKai6ULrUMVDjUFWxl22afc
     depends_on:
       - postgres
 
@@ -97,6 +104,7 @@ services:
       - "5432:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
+
 
 volumes:
   pg_data:
