--- a/jenkins-docker/docker-compose.yml
+++ b/jenkins-docker/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3.8'
 
 services:
   jenkins:
-    image: jenkins/jenkins:lts
+    build: .
     container_name: jenkins
     ports:
       - "8055:8080"
       - "50000:50000"
     volumes:
       - jenkins_home:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock  # Supaya Jenkins bisa build Docker di host
+      - /var/run/docker.sock:/var/run/docker.sock
     restart: always
 
 volumes:
