--- a/jenkins-docker/Dockerfile
+++ b/jenkins-docker/Dockerfile
@@ -1,30 +1,16 @@
-# jenkins-docker/Dockerfile
-
 FROM jenkins/jenkins:lts
-
-# Switch to root user to install dependencies
-USER root
-
-# Reduce vulnerabilities by using a minimal base image and cleaning up
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    docker.io \
-    docker-compose && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
-# Add Jenkins user to the Docker group
-RUN usermod -aG docker jenkins
-
-# Switch back to Jenkins user
-USER jenkins
-
-# Ensure the base image is updated
 
 USER root
 
 # Install Docker CLI & Compose
 RUN apt-get update && \
-    apt-get install -y docker.io docker-compose && \
-    usermod -aG docker jenkins
+    apt-get install -y docker.io docker-compose curl apt-transport-https ca-certificates gnupg
+
+# Install Google Cloud SDK
+RUN echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
+    curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add - && \
+    apt-get update && apt-get install -y google-cloud-sdk kubectl
+
+RUN usermod -aG docker jenkins
 
 USER jenkins
