--- a/jenkins-docker/docker-compose.yml
+++ b/jenkins-docker/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
     restart: always
+    privileged: true   # Gunakan kalau grup GID tetap gagal cocok
 
 volumes:
   jenkins_home:
