--- a/food-service/.env
+++ b/food-service/.env
@@ -1,2 +1,3 @@
 DATABASE_URI=postgres://postgres:1234@localhost:5432/food_service?sslmode=disable
-GRPC_PORT=50052
+GRPC_PORT=50053
+MERCHANT_SERVICE_ADDR=localhost:50054
