--- a/merchant-service/Dockerfile
+++ b/merchant-service/Dockerfile
@@ -1,23 +1,10 @@
-# Gunakan official Go image sebagai base image
 FROM golang:1.24-alpine AS builder
-
-# Set working directory
 WORKDIR /app
-
-# Copy go.mod dan go.sum
 COPY go.mod go.sum ./
-
-# Download dependencies
+RUN go mod tidy
 RUN go mod download
-
-# Copy semua file project
 COPY . .
-
-# Build binary
+RUN go mod tidy
 RUN go build -o merchant-service ./cmd/main.go
-
-# Expose gRPC port
 EXPOSE 50054
-
-# Jalankan binary
 CMD ["./merchant-service"]
