--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,10 @@ services:
       - SMTP_PASS=elzi jyjh plqs hbxv
       - SMTP_FROM=ruditopujiarso@gmail.com
       - GOOGLE_API_KEY=AIzaSyADuYB4pe4PPKai6ULrUMVDjUFWxl22afc
+      - KAFKA_BROKER=kafka:9092
     depends_on:
       - postgres
+      - kafka
 
   courier-service:
     build:
@@ -45,8 +47,10 @@ services:
     environment:
       - DATABASE_URI=postgres://postgres:1234@postgres:5432/food_service?sslmode=disable
       - GRPC_PORT=50053
+      - KAFKA_BROKER=kafka:9092
     depends_on:
       - postgres
+      - kafka
 
   merchant-service:
     build:
