--- a/transaction-service/.env
+++ b/transaction-service/.env
@@ -1,7 +1,8 @@
 DATABASE_URI=postgres://postgres:1234@localhost:5432/transaction_service?sslmode=disable
 GRPC_PORT=50055
-MIDTRANS_SERVER_KEY=SB-Mid-server-FzH5xlkx-uwmU__xroDdRPUG
-MIDTRANS_CLIENT_KEY=SB-Mid-client-mMqK1sLFvFOSaG93
+MIDTRANS_SERVER_KEY=
+MIDTRANS_CLIENT_KEY==
 MIDTRANS_ENV=sandbox
 COURIER_SERVICE_ADDR=localhost:50052
+
 MERCHANT_SERVICE_ADDR=localhost:50054
